--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ protobuf==3.20.1
 psutil==5.9.1
 pure-eval==0.2.2
 pyarrow==9.0.0
-pydeck==0.7.1
+pydeck>=0.8.0b4 
 Pygments==2.13.0
 Pympler==1.0.1
 pyparsing==3.0.9
@@ -48,7 +48,6 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.2.1
 pytz-deprecation-shim==0.1.0.post0
-# pywin32==304  # Removed as it's incompatible with Python 3.12
 pyzmq==23.2.1
 requests==2.28.1
 rich>=13.9.4  # Updated to the latest version
